// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render routes for logged in user 1`] = `
<header>
  <nav
    className="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
      >
        <img
          className="logo"
          src="logoDForum.jpg"
        />
      </a>
      <div
        className="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
      >
        <ul
          className="navbar-nav"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link text-dark"
              href="/"
              onClick={[Function]}
            >
              Home
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link text-dark"
              href="/Account"
              onClick={[Function]}
            >
              Hi 
              test
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link text-dark"
              href=""
              onClick={[Function]}
            >
              Logout
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header should render routes for not logged in user 1`] = `
<header>
  <nav
    className="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
      >
        <img
          className="logo"
          src="logoDForum.jpg"
        />
      </a>
      <div
        className="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
      >
        <ul
          className="navbar-nav"
        >
          <li
            className="nav-item"
          >
            <a
              className="nav-link text-dark"
              href="/"
              onClick={[Function]}
            >
              Home
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              class="nav-link text-dark"
              href="/Login"
              onClick={[Function]}
            >
              Login
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              class="nav-link text-dark"
              href="/Register"
              onClick={[Function]}
            >
              Register
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</header>
`;
